// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serve both (/Users/dom/projects/redwood/redwood/packages/api-server/dist/bin.js) > errors out on unknown args 1`] = `
"rw-server

Start a server for serving the api and web sides

Commands:
  rw-server      Start a server for serving the api and web sides      [default]
  rw-server api  Start a server for serving the api side
  rw-server web  Start a server for serving the web side

Options:
      --webPort, --web-port                 The port for the web server to
                                            listen on                   [number]
      --webHost, --web-host                 The host for the web server to
                                            listen on. Note that you most likely
                                            want this to be '0.0.0.0' in
                                            production                  [string]
      --apiPort, --api-port                 The port for the api server to
                                            listen on                   [number]
      --apiHost, --api-host                 The host for the api server to
                                            listen on. Note that you most likely
                                            want this to be '0.0.0.0' in
                                            production                  [string]
      --apiRootPath, --api-root-path,       Root path where your api functions
      --rootPath, --root-path               are served   [string] [default: "/"]
  -h, --help                                Show help                  [boolean]
  -v, --version                             Show version number        [boolean]

Unknown arguments: foo, bar, baz
"
`;

exports[`serve both (/Users/dom/projects/redwood/redwood/packages/api-server/dist/bin.js) > has help configured 1`] = `
"rw-server

Start a server for serving the api and web sides

Commands:
  rw-server      Start a server for serving the api and web sides      [default]
  rw-server api  Start a server for serving the api side
  rw-server web  Start a server for serving the web side

Options:
      --webPort, --web-port                 The port for the web server to
                                            listen on                   [number]
      --webHost, --web-host                 The host for the web server to
                                            listen on. Note that you most likely
                                            want this to be '0.0.0.0' in
                                            production                  [string]
      --apiPort, --api-port                 The port for the api server to
                                            listen on                   [number]
      --apiHost, --api-host                 The host for the api server to
                                            listen on. Note that you most likely
                                            want this to be '0.0.0.0' in
                                            production                  [string]
      --apiRootPath, --api-root-path,       Root path where your api functions
      --rootPath, --root-path               are served   [string] [default: "/"]
  -h, --help                                Show help                  [boolean]
  -v, --version                             Show version number        [boolean]
"
`;

exports[`serve both ([ '/Users/dom/projects/redwood/redwood/packages/cli/dist/index.js', 'serve' ]) > errors out on unknown args 1`] = `
"rw serve [side]

Start a server for serving both the api and web sides

Commands:
  rw serve      Start a server for serving the api and web sides       [default]
  rw serve api  Start a server for serving the api side
  rw serve web  Start a server for serving the web side

Options:
      --version                             Show version number        [boolean]
      --cwd                                 Working directory to use (where
                                            \`redwood.toml\` is located)
      --telemetry                           Whether to send anonymous usage
                                            telemetry to RedwoodJS     [boolean]
      --webPort, --web-port                 The port for the web server to
                                            listen on                   [number]
      --webHost, --web-host                 The host for the web server to
                                            listen on. Note that you most likely
                                            want this to be '0.0.0.0' in
                                            production                  [string]
      --apiPort, --api-port                 The port for the api server to
                                            listen on                   [number]
      --apiHost, --api-host                 The host for the api server to
                                            listen on. Note that you most likely
                                            want this to be '0.0.0.0' in
                                            production                  [string]
      --apiRootPath, --api-root-path,       Root path where your api functions
      --rootPath, --root-path               are served   [string] [default: "/"]
  -h, --help                                Show help                  [boolean]

Also see the Redwood CLI Reference
(​https://redwoodjs.com/docs/cli-commands#serve​)

Unknown arguments: foo, bar, baz
"
`;

exports[`serve both ([ '/Users/dom/projects/redwood/redwood/packages/cli/dist/index.js', 'serve' ]) > has help configured 1`] = `
"rw serve [side]

Start a server for serving both the api and web sides

Commands:
  rw serve      Start a server for serving the api and web sides       [default]
  rw serve api  Start a server for serving the api side
  rw serve web  Start a server for serving the web side

Options:
      --version                             Show version number        [boolean]
      --cwd                                 Working directory to use (where
                                            \`redwood.toml\` is located)
      --telemetry                           Whether to send anonymous usage
                                            telemetry to RedwoodJS     [boolean]
      --webPort, --web-port                 The port for the web server to
                                            listen on                   [number]
      --webHost, --web-host                 The host for the web server to
                                            listen on. Note that you most likely
                                            want this to be '0.0.0.0' in
                                            production                  [string]
      --apiPort, --api-port                 The port for the api server to
                                            listen on                   [number]
      --apiHost, --api-host                 The host for the api server to
                                            listen on. Note that you most likely
                                            want this to be '0.0.0.0' in
                                            production                  [string]
      --apiRootPath, --api-root-path,       Root path where your api functions
      --rootPath, --root-path               are served   [string] [default: "/"]
  -h, --help                                Show help                  [boolean]

Also see the Redwood CLI Reference
(​https://redwoodjs.com/docs/cli-commands#serve​)
"
`;
